# CompactVLMQt

./: .gitignore  CMakeLists.txt  README.md  VLM.txt  app.rc  main.cpp
installer/: CompactVLMQt.nsi  README_INSTALL.md  add_bom.ps1
qml/: AboutDialog.qml  ChatPanel.qml  Main.qml  StyledButton.qml  Theme.qml  VideoPanel.qml
src/: CaptureImageProvider.cpp  CaptureImageProvider.h  TranslateServerManager.cpp  TranslateServerManager.h  VLCFrameGrabber.cpp  VLCFrameGrabber.h  VLMBridge.cpp  VLMBridge.h  VLMEngine.cpp  VLMEngine.h  VideoPlayer.cpp  VideoPlayer.h  VideoSurface.cpp  VideoSurface.h
